<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MisurApp</string>
    <string name="empty" translatable="false"/>
    <string name="text_intro_first_title">Welcome!</string>
    <string name="text_intro_first_text">Welcome to MisurApp! This app will help you make simple and quick measurements, organize them and manage them as you see for convenience</string>
    <string name="text_intro_second_title">Full control</string>
    <string name="text_intro_second_text">Create quick measurements</string>
    <string name="text_intro_third_title">Wide choice</string>
    <string name="text_intro_third_text">Choose from various tools that will help you in your work, easy and comfortable to use! What are you waiting for? Start using MisurApp</string>
    <string name="text_intro_start_button">Start</string>
    <string name="text_intro_confirm_button">Confirm</string>
    <string name="text_sign_in_button">Sign in with e-mail</string>
    <string name="text_question">Don\'t have an account yet?</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_insert_password">Insert your password</string>
    <string name="text_insert_name">Insert your name</string>
    <string name="text_insert_surname">Insert your surname</string>
    <string name="text_confirm_pass">Confirm password</string>
    <string name="text_register_layout">Register</string>
    <string name="text_header_layout_your_account">Your account</string>
    <string name="text_main_no_items">There are no saved items</string>
    <string name="text_nav_main_menu_item">Main menu</string>
    <string name="text_nav_add_measure_item">Add measure</string>
    <string name="text_insert_email">Insert your e-mail</string>
    <string name="text_login">Sign in</string>
    <string name="text_logout">Sign out</string>
    <string name="text_registration_button">Register with e-mail</string>
    <string name="text_insert_title">Insert title</string>
    <string name="text_title">Title</string>
    <string name="text_insert_description">Enter the description for the measurements\neg. right side of the table</string>
    <string name="text_description">Description</string>
    <string name="text_add_measure">Add measure</string>
    <string name="text_save_measure">Save measure</string>
    <string name="text_save_complete">Successful saving</string>
    <string name="text_list_tools">Tool list</string>
    <string name="text_access_no_authentication"><u>Use MisurApp without authentication</u></string>
    <string name="text_radio_complete">Complete</string>
    <string name="text_radio_essential">Essential</string>
    <string name="text_radio_functionality">Select functionality:</string>
    <string name="correct_sign_in">Successful sign in</string>
    <string name="incorrect_sign_in">An error has occurred during the authentication, try again</string>
    <string name="text_no_connection">Check your internet connection</string>
    <string name="text_complete_functionality_title">Use all functions</string>
    <string name="text_complete_functionality_summary">All application features are available</string>
    <string name="text_essentials_functionality_title">Use just essentials functions</string>
    <string name="text_essentials_functionality_summary">You can just use the features that are essentially</string>
    <string name="text_confirm_button_settings">Confirm</string>
    <string name="text_settings">Settings</string>
    <string name="text_auth_empty_name">Insert your name</string>
    <string name="text_auth_empty_surname">Insert your surname</string>
    <string name="text_auth_empty_email">Insert an email</string>
    <string name="text_auth_empty_password">Insert password</string>
    <string name="text_auth_incorrect_email">Incorrect email</string>
    <string name="text_auth_incorrect_password">Incorrect password</string>
    <string name="text_auth_mismatch_password">Password must be identical</string>
    <string name="text_permission_denied_pedometer">You have to grant the sports permissions to use the pedometer</string>
    <string name="text_level">Level</string>
    <string name="text_level_description">You can measure the level of your plains</string>
    <string name="text_ruler">Ruler</string>
    <string name="text_magnetometer">Magnetometer</string>
    <string name="text_ruler_description">Use the ruler</string>
    <string name="text_length">Length</string>
    <string name="text_insert_centimeters">Insert centimeters</string>
    <string name="text_system_language">System language</string>
    <string name="text_language">Language</string>
    <string name="text_select_language">Select your language</string>
    <string name="magnetometer_unit">µTesla</string>
    <string name="tesla_chart_label">µTesla values</string>
    <string name="text_lux_meter">Lux meter</string>
    <string name="light_unit">lux</string>
    <string name="light_chart_label">lux values</string>
    <string name="text_barometer">Barometer</string>
    <string name="text_height">Height</string>
    <string name="barometer_unit" translatable="false">hPa</string>
    <string name="height_unit" translatable="false">m</string>
    <string name="text_pedometer">Pedometer</string>
    <string name="text_compass">Compass</string>
    <string name="compass_degrees" translatable="false">%1$d°</string>
    <string name="text_pedometer_step">Steps</string>
    <string name="description_text_barometer_default">Scanning…</string>
    <string name="description_text_barometer_under_0">Enjoy your underwater journey!</string>
    <string name="description_text_barometer_low">You are almost at the sea level</string>
    <string name="description_text_barometer_normal">You are at hill level</string>
    <string name="description_text_barometer_high">Are you climbing a mountain?!</string>
    <string name="description_text_barometer_above_everest">Flying in the sky, will ya?</string>
    <string name="text_start_recording">Start recording</string>
    <string name="text_stop_recording">Stop recording</string>
    <string name="text_date">GG/MM/AAAA</string>
    <string name="text_edit_measure">Edit measure</string>
</resources>