<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/drawer_menu_main"
            android:icon="@drawable/icon_launcher"
            android:title="@string/text_nav_main_menu_item" />

        <item
            android:id="@+id/drawer_menu_login"
            android:icon="@drawable/icon_login"
            android:title="@string/text_login" />

        <item
            android:id="@+id/drawer_menu_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/text_logout" />


        <item
            android:id="@+id/drawer_menu_second"
            android:icon="@drawable/icon_compass"
            android:title="@string/text_nav_add_measure_item" />

    </group>

    <item android:title="@string/app_name">

        <menu>

            <group>

                <item
                    android:id="@+id/drawer_menu_settings"
                    android:icon="@drawable/icon_settings"
                    android:title="@string/text_settings" />

            </group>

        </menu>

    </item>

</menu>