<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_image_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:alpha=".75"
        android:padding="8dp"
        android:scaleType="center"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_close" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_text_view_title"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/alegreya_sc_bold"
        android:gravity="center"
        android:text="@string/text_login"
        android:textColor="@color/grey_dark"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.700" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input_text_box_email"
        android:layout_marginTop="80dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text_view_title"
        style="@style/text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input_text_email"
            android:drawableEnd="@drawable/icon_email"
            android:hint="@string/text_insert_email"
            android:inputType="textEmailAddress"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input_text_box_password"
        android:layout_marginTop="20dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input_text_box_email"
        style="@style/text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input_text_password"
            android:drawableEnd="@drawable/icon_lock"
            android:hint="@string/text_insert_password"
            android:inputType="textPassword"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_forgot_password"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input_text_box_password" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_text_view_select_functionality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/text_question"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="@+id/text_signup"
        app:layout_constraintEnd_toStartOf="@+id/text_signup"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_registration_button"
        android:textColor="@color/secondary_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary"
        app:backgroundTint="@color/grey_dark"
        android:text="@string/text_login"
        android:textAllCaps="true"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>