<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/registration_image_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:alpha=".75"
        android:padding="8dp"
        android:scaleType="center"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_close" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registration_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/alegreya_sc_bold"
        android:gravity="center"
        android:text="@string/text_register_layout"
        android:textColor="@color/grey_dark"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_input_text_box_name"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@style/text_input_layout_label"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_text_view_title"
        style="@style/text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_input_text_name"
            android:drawableEnd="@drawable/icon_username"
            android:hint="@string/text_insert_name"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_input_text_box_surname"
        android:layout_marginTop="10dp"
        app:hintTextAppearance="@style/text_input_layout_label"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_input_text_box_name"
        style="@style/text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_input_text_surname"
            android:drawableEnd="@drawable/icon_username"
            android:hint="@string/text_insert_surname"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_input_text_box_email"
        android:layout_marginTop="10dp"
        app:hintTextAppearance="@style/text_input_layout_label"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_input_text_box_surname"
        style="@style/text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_input_text_email"
            android:drawableEnd="@drawable/icon_email"
            android:hint="@string/text_insert_email"
            android:inputType="textEmailAddress"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_input_text_box_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_text_rounded"
        android:textColorHint="@color/secondary_text"
        app:hintTextAppearance="@style/text_input_layout_label"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_input_text_box_email"
        style="@style/text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_input_text_password"
            android:drawableEnd="@drawable/icon_lock"
            android:hint="@string/text_insert_password"
            android:inputType="textPassword"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_input_text_box_confirm_password"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/secondary_text"
        app:hintTextAppearance="@style/text_input_layout_label"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_input_text_box_password"
        style="@style/text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_input_text_confirm_password"
            android:drawableEnd="@drawable/icon_lock"
            android:hint="@string/text_confirm_pass"
            android:inputType="textPassword"
            style="@style/text_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary"
        android:text="@string/text_registration_button"
        android:textAllCaps="true"
        android:textColor="@color/button_text"
        app:backgroundTint="@color/grey_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
    
</androidx.constraintlayout.widget.ConstraintLayout>